<resources>
    <string name="app_name">Beeper</string>
    <string name="action_play">Play</string>
    <string name="action_stop">Stop</string>
    <string name="action_about">About</string>
    <string name="action_defaults">Set Beeper defaults</string>
    <string name="title_beeps">Number of beeps [1…50]:</string>
    <string name="title_delay">Delay between [0…500 ms]:</string>
    <string name="title_tones">Beep ToneGenerator tone:</string>
    <string name="title_volume">Beep volume [0…100 %]:</string>
    <string name="title_duration">Beep duration [0…1000 ms]:</string>
</resources>
